# transactor

./: Cargo.toml  README.md  full_test.sh
resources/test_input/: chargeback_then_transactions.csv  deposit_one_client_two_deposits.csv  deposit_two_clients.csv  deposit_withdraw_one_client.csv  dispute_transaction_one_client.csv  multiply_disputed_singly_resolved.csv  resolved_but_undisputed.csv  resolved_dispute.csv  resolved_dispute_chargeback.csv  undisputed_chargeback.csv  withdrawal_too_much.csv
resources/test_output/: deposit_one_client_two_deposits.csv  deposit_two_clients.csv  dispute_transaction_into_negative.csv  dispute_transaction_one_client.csv  resolved_dispute_chargeback.csv  withdrawal_too_much.csv
src/: bank.rs  error.rs  main.rs
