[package]
name = "transactor"
version = "0.1.0"
authors = ["Chris Campbell <campbellC@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.24"
csv = "1.1"
rust_decimal = {version = "1.10.3", features = ["serde-str"] }